--- a/FoodOn/Views/Food/Index.cshtml
+++ b/FoodOn/Views/Food/Index.cshtml
@@ -1,69 +1,112 @@
-﻿<nav class="navbar navbar-expand-lg navbar-light bg-success mt-5">
+﻿@model SearchViewModel
+@using FoodOn.Models
+<nav class="navbar navbar-expand-lg navbar-light bg-success mt-5">
     <img class="icon" src="~/dish.png" />
     <a class="navbar-brand text-white ml-3 title">
         Food Recipes App
     </a>
 </nav>
+<form asp-action="Index" data-ajax="true" data-ajax-method="POST" data-ajax-mode="replace" data-ajax-update="#result">
+    <div class="row body">
+        <div class="col-8 p-3">
+            <div class="row card p-3 mr-3">
+                <div class="row m-2">
+                    <img src="~/ingredients.png" />
+                    <h5 class="ml-1">Ingredient</h5>
+                </div>
 
-<div class="row body">
-    <div class="col-8 p-3">
-        <div class="col-12 card p-3">
-            <div class="row m-2">
-                <img src="~/ingredients.png" />
-                <h5 class="ml-1">Ingredient</h5>
-            </div>
-
-            <form asp-controller="Food" asp-action="Index">
-                <select class="selectpicker" data-style="btn-success" data-width="600px" multiple title="Select ingredient..." asp-items="ViewBag.Ingredients" name="ingredientList">
+                <select class="selectpicker" data-style="btn-success" data-width="auto" multiple title="Select ingredient..." asp-items="ViewBag.Ingredients" asp-for="@Model.Ingredients">
                 </select>
-                <button type="submit">OK</button>
-            </form>
-            
-        </div>
-
-        <div class="col-12 card p-3 mt-3">
-            <div class="row m-2">
-                <img src="~/dish.png" />
-                <h5 class="ml-1">Meal</h5>
 
             </div>
-            <div class="meal-options">
-                <label class="m-1">
-                    <input type="radio" name="test" value="small" checked>
-                    <img class="rounded-circle" src="~/breakfast.png">
-                    <h6>Breakfast</h6>
-                </label>
-                <label class="m-1">
-                    <input type="radio" name="test" value="big">
-                    <img class="rounded-circle" src="~/rice.png">
-                    <h6>Lunch</h6>
-                </label>
-                <label class="m-1">
-                    <input type="radio" name="test" value="big">
-                    <img class="rounded-circle" src="~/vegetables.png">
-                    <h6>Dinner</h6>
-                </label>
+
+            <div class="row mt-4">
+                <div class="col-5 card p-3 mr-3">
+                    <div class="row m-2">
+                        <img src="~/dish.png" />
+                        <h5 class="ml-1">Meal</h5>
+
+                    </div>
+                    <div class="meal-options row p-2 ml-2">
+                        <label class="col-6">
+                            <input type="radio" asp-for="@Model.MealType" value="0" checked>
+                            <img class="rounded-circle" src="~/yogurt.png">
+                            <h6>All Meal</h6>
+                        </label>
+                        <label class="col-6">
+                            <input type="radio" asp-for="@Model.MealType" value="1">
+                            <img class="rounded-circle" src="~/breakfast.png">
+                            <h6>Breakfast</h6>
+                        </label>
+                    </div>
+                    <div class="meal-options row p-2 ml-2">
+                        <label class="col-6">
+                            <input type="radio" asp-for="@Model.MealType" value="2">
+                            <img class="rounded-circle" src="~/rice.png">
+                            <h6>Lunch</h6>
+                        </label>
+                        <label class="col-6">
+                            <input type="radio" asp-for="@Model.MealType" value="3">
+                            <img class="rounded-circle" src="~/vegetables.png">
+                            <h6>Dinner</h6>
+                        </label>
+                    </div>
+
+                </div>
+
+                <div class="col-6 card p-3 ml-3">
+                    <div class="row m-2">
+                        <img src="~/diet.png" />
+                        <h5 class="ml-1">Course</h5>
+                    </div>
+                    <div class="meal-options row p-2 ml-2">
+                        <label class="col-4">
+                            <input type="radio" asp-for="@Model.CourseType" value="0" checked>
+                            <img class="rounded-circle" src="~/hummus.png">
+                            <h6>All Course</h6>
+                        </label>
+                        <label class="col-4">
+                            <input type="radio" asp-for="@Model.CourseType" value="1">
+                            <img class="rounded-circle" src="~/meatballs.png">
+                            <h6>Dessert</h6>
+                        </label>
+                        <label class="col-4">
+                            <input type="radio" asp-for="@Model.CourseType" value="4">
+                            <img class="rounded-circle" src="~/no-sugar.png">
+                            <h6>Low Sugar</h6>
+                        </label>
+                    </div>
+                    <div class="meal-options row p-2 ml-2">
+                        <label class="col-4">
+                            <input type="radio" asp-for="@Model.CourseType" value="2">
+                            <img class="rounded-circle" src="~/spinach.png" />
+                            <h6 class="ml-1">Salad</h6>
+                        </label>
+                        <label class="col-4">
+                            <input type="radio" asp-for="@Model.CourseType" value="3">
+                            <img class="rounded-circle" src="~/soup.png">
+                            <h6 class="ml-1">Soup</h6>
+                        </label>
+                    </div>
+                </div>
             </div>
-            
 
         </div>
 
-        <div class="col-12 card p-3 mt-3">
-            <div class="row m-2">
-                <img src="~/diet.png" />
-                <h5 class="ml-1">Course</h5>
+        <div class="col-4 p-3">
+            <div class="col-12 card p-3">
+                <div class="row m-2">
+                    <img src="~/recipe.png" />
+                    <h5 class="ml-1">Recipes List</h5>
+                </div>
+                <div id="result">
+                    @{ await Html.RenderPartialAsync("_Result", new List<string>()); }
+                </div>
+                
             </div>
         </div>
     </div>
-
-    <div class="col-4 p-3">
-        <div class="col-12 card p-3">
-            <div class="row m-2">
-                <img src="~/recipe.png" />
-                <h5 class="ml-1">Recipes List</h5>
-            </div>
-        </div>
-    </div>
-</div>
+    <button type="submit">OK</button>
+</form>
 
 
